test/Harper/Tests/Good/Example_Fibonacci.har
fib :: Integer -> Integer;
fib n = {
  var (previous :: Integer) = 1;
  var (current :: Integer) = 1;
  var (i :: Integer) = 2;
  while i < n {
    (next :: Integer) = previous + current;
    previous := current;
    current := next;

    i += 1;
  }

  return current;
};

main :: Integer;
main = fib 42;