test/Harper/Tests/Bad/SideeffectBubbleUpToFunctionType.har
printAndRet :: Integer -> Integer;
printAndRet n = {
  eval printLn n ();
  return n;
};